fix modal overflow

--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -7,7 +7,8 @@
     margin: auto;
     max-height: 75%;
     outline: none;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: $global-padding * 1.5;
     position: fixed;
     right: 0;
